<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dip" android:text="@string/label_debug"/>
    <org.ros.android.view.RosTextView
        android:id="@+id/response"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="30dip" android:background="@drawable/border" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dip" android:text="@string/label_tip"/>
    <org.ros.android.view.RosTextView
        android:id="@+id/msg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="30dip" android:background="@drawable/border"/>

    <!--org.ros.android.view.RosImageView
        android:id="@+id/camera"
        android:layout_width="match_parent"
        android:layout_height="346dp"
        app:srcCompat="@drawable/ic_launcher_background" /-->
    <com.example.wuliangzhu.myros.RosCameraView
        android:id="@+id/rossurface"
        android:layout_width="match_parent"
        android:layout_height="346dp" />
    <Button
        android:id="@+id/startMove"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_start_move"
        android:tag="1001"/>

    <Button
        android:id="@+id/stopMove"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_stop_move"
        android:tag="1002"/>
    <Button
        android:id="@+id/startPlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_start_play"
        android:tag="1003"/>

    <Button
        android:id="@+id/turn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_play_turn"
        android:tag="1004"/>
</LinearLayout>